Set the clear heat button threshold to be 50% higher 
Fixed: windowed FBD should default to 50% of what it is now
forces-and-motion: Changed the layout so that the FBD doesn't overap the object's force label by default
# 1.03.48 (35433) Oct 2, 2009
Added a physics workaround to help reduce or resolve the flickering problem by enabling the "pressing" wall force a bit sooner
    Should resolve:  Force vectors flicker when pushing against the right-hand-side wall when parallel gravity component is nonzero
Fixed: FBD should open as a separate window in cases where it does not fit in the play area, for all graphing tabs in F&M + Ramp
Moved play area down in non-charting F&M modules so the FBD can go above the surface area
Performance improvements, using Color(0,0,0,0) on object selection icons was very expensive
# 1.03.46 (35422) Oct 1, 2009
Fixed: Forces and motion ramp segment shouldn't be rotatable.
Moved the custom crate to the second row
Fixed a problem that prevented changing the applied force after time is up on charting modules
Doubled threshold for Cool Ramp button and ramp redness scale factor
Made it so Fire Dog is 25% faster, with 25% less water drops
Changed default vector dimensions to tail=4 head=10
# 1.03.45 (35403) Oct 1, 2009
Added developer control for force arrow dimensions
Improved game logic; game continues even when the object comes to rest, if robot has remaining energy
Make sure play area gets focus after dismissing score dialog
Make sure "ok" button gets focus on summary screens
Fixed energy graph title, key was not found previously
# 1.03.44 (35353) Sep 29, 2009
the-ramp: Moved force graph tab in front of coordinate frame tab
the-ramp: Moved friction control above vector and coordinate frame contols in the control panel
Improved defaults for mystery object
moving-man: Removed heat from moving man model
moving-man: Removed pusher from moving man
forces-and-motion: Made it so text boxes are not editable for x,v,a in Forces and Motion