@@ -1,4 +1,7 @@
-Set the clear heat button threshold to be 50% higher 
+robot-moving-company: Added introduction screen
+robot-moving-company: Improved viewport and layout
+robot-moving-company: Removed unused controls
+Set the clear heat button threshold to be 50% higher
 Fixed: windowed FBD should default to 50% of what it is now
 forces-and-motion: Changed the layout so that the FBD doesn't overap the object's force label by default
 # 1.03.48 (35433) Oct 2, 2009
